@@ -13,9 +13,8 @@ import de.xwic.cube.Key;
  * Default dimension based cube viewer.
  * @author Florian Lippisch
  */
-public class DefaultDimensionDataProvider implements ICubeDataProvider {
+public class DefaultDimensionDataProvider extends AbstractCubeDataProvider implements ICubeDataProvider {
 
-	protected int priority = 1;
 	protected IMeasure fixedMeasure = null;
 	
 	/* (non-Javadoc)
@@ -41,38 +40,6 @@ public class DefaultDimensionDataProvider implements ICubeDataProvider {
 		return value != null ? model.getValueFormat().format(value) : "";
 	}
 
-	/* (non-Javadoc)
-	 * @see de.xwic.cube.webui.viewer.ICubeDataProvider#createCursor(de.xwic.cube.webui.viewer.CubeViewerModel, de.xwic.cube.webui.viewer.ContentInfo, de.xwic.cube.webui.viewer.ContentInfo)
-	 */
-	public Key createCursor(CubeViewerModel model, ContentInfo row, ContentInfo col) {
-		ICube cube = model.getCube();
-		Key cursor = model.createCursor();
-		
-		if (row != null) {
-			for (IDimensionElement elm : row.getElements()) {
-				int idx = cube.getDimensionIndex(elm.getDimension());
-				cursor.setDimensionElement(idx, elm);
-			}
-		}
-		
-		if (col != null) {
-			for (IDimensionElement elm : col.getElements()) {
-				int idx = cube.getDimensionIndex(elm.getDimension());
-				cursor.setDimensionElement(idx, elm);
-			}
-		}
-		
-		return cursor;
-	}
-
-
-	/* (non-Javadoc)
-	 * @see de.xwic.cube.webui.viewer.ICubeDataProvider#getPriority()
-	 */
-	public int getPriority() {
-		return priority;
-	}
-
 	/**
 	 * @return the fixedMeasure
 	 */
@@ -85,12 +52,5 @@ public class DefaultDimensionDataProvider implements ICubeDataProvider {
 	 */
 	public void setFixedMeasure(IMeasure fixedMeasure) {
 		this.fixedMeasure = fixedMeasure;
-	}
-
-	/**
-	 * @param priority the priority to set
-	 */
-	public void setPriority(int priority) {
-		this.priority = priority;
 	}
 }
