@@ -1,6 +1,10 @@
 Change Notes
 =============
 
+2009-06-15	FLI
+	- Added AbstractCubeDataProvider for easier subclassing
+	- Added UserDataObject property to DimensinoNavigationProvider
+
 2009-02-24	FLI
 	- Added customUserObject property to TotalProvider, that is provided in the ContentInfo
 	  for special DataProviders
